--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
   <div class="container">
     <header>
-      <img src="img/biaesteves.jpg" alt="foto da bianca" class="profile-photo" />
+      <img src="Img/biaesteves.jpg" alt="foto da bianca" class="profile-photo" />
       <h1>Blog da Enfermeira Bianca - Ozonioterapia e Saúde</h1>
       <p>Informação, dicas e novidades sobre tratamentos naturais e inovadores para seu bem-estar.</p>
     </header>
