--- a/index.html
+++ b/index.html
@@ -270,6 +270,31 @@
         padding: 12px 25px;
         font-size: 1rem;
       }
+
+      instagram-icon {
+  perspective: 1000px;
+  width: 80px;
+  margin: 20px;
+}
+
+.cube {
+  width: 80px;
+  height: 80px;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.instagram-icon:hover .cube {
+  transform: rotateY(360deg);
+}
+
+.cube img {
+  width: 100%;
+  height: 100%;
+  border-radius: 20%;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+}
+
     }
   </style>
 </head>
